[package]
name = "github-issues"
version = "0.1.1"
authors = ["Arnau Siches <arnau@ustwo.com>"]

[dependencies]
ansi_term = "0.7"
csv = "0.14"
curl = "0.2"
docopt = "0.6"
env_logger = "0.3"
log = "0.3"
regex = "0.1"
rustc-serialize = "0.3"

[[bin]]
name = "github-issues"
test = false
doc = false

[[test]]
name = "lib"
