[package]
name = "github-issues"
version = "0.3.0"
authors = ["Arnau Siches <arnau@ustwo.com>"]

[dependencies]
ansi_term = "0.9"
csv = "0.14"
clap = "2.16"
env_logger = "0.3"
log = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
hyper = "0.9"
strsim = "0.5.1"

[[bin]]
name = "github-issues"
test = true
doc = false

[lib]
name = "nerve"
path = "src/nerve/lib.rs"
